Implement manage feed controller.

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -14,14 +14,13 @@
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark" th:fragment="navigation">
     <ul class="navbar-nav">
-        <a class="navbar-brand" href="/">News Hub</a>
-        <li class="nav-item"><a class = "nav-link" href="/">Home</a></li>
-        <li class="nav-item"><a class = "nav-link" href="/Register">Register</a></li>
+        <a class="navbar-brand mb-0" style="font-size: 1.5em;" href="/">News Hub</a>
     </ul>
 
     <ul class="navbar-nav navbar-right ml-auto">
         <li class = "nav-link"><a class = "nav-link" href="/Register"><span class="glyphicon glyphicon-user" style="margin-right: 10px"></span>Sign Up</a></li>
         <li class = "nav-link"><a class = "nav-link" href="/Login"><span class="glyphicon glyphicon-log-in" style="margin-right: 10px"></span>Login</a></li>
+        <li class = "nav-link"><a class = "nav-link" href="/ManageFeeds"><span class="glyphicon glyphicon-cog" style="margin-right: 10px"></span>Manage Feeds</a></li>
     </ul>
 </nav>
 
