--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
     <nav th:replace = "fragments :: navigation"></nav>
-    <div class="table-responsive container">
+    <div class="table-responsive container" style="margin-top: 2%; margin-bottom: 2%;">
         <table class = "table table-striped" style = "max-width:1200px;">
             <col width="130">
             <col width="200">
