--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,11 +15,7 @@
     <nav th:replace = "fragments :: navigation"></nav>
 
     <form method="post" class="container form">
-        <h1 class="display-5 form_header">Sign-Up</h1>
-        <div class="form-group">
-            <label for="emailTB">Email address</label>
-            <input type="email" class="form-control" id="emailTB" placeholder="Email">
-        </div>
+        <h1 class="display-5 form_header">Login</h1>
         <div class="form-group">
             <label for="usernameTB">Password</label>
             <input type="text" class="form-control" id="usernameTB" placeholder="Username">
@@ -27,10 +23,6 @@
         <div class="form-group">
             <label for="passwordTB">Password</label>
             <input type="password" class="form-control" id="passwordTB" placeholder="Password">
-        </div>
-        <div class="form-group">
-            <label for="vPasswordTB">Verify Password</label>
-            <input type="password" class="form-control" id="vPasswordTB" placeholder="Password">
         </div>
 
         <button type="submit" class="btn btn-primary btn-lg btn-block">Submit</button>
