--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8"/>
     <title th:text = "${title}">Daily News</title>
 
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <style>
         @import url("//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css")
     </style>
@@ -18,9 +18,9 @@
     </ul>
 
     <ul class="navbar-nav navbar-right ml-auto">
-        <li class = "nav-link"><a class = "nav-link" href="/Register"><span class="glyphicon glyphicon-user" style="margin-right: 10px"></span>Sign Up</a></li>
-        <li class = "nav-link"><a class = "nav-link" href="/Login"><span class="glyphicon glyphicon-log-in" style="margin-right: 10px"></span>Login</a></li>
-        <li class = "nav-link"><a class = "nav-link" href="/ManageFeeds"><span class="glyphicon glyphicon-cog" style="margin-right: 10px"></span>Manage Feeds</a></li>
+        <li class = "nav-link"><a class = "nav-link" href="/register"><span class="glyphicon glyphicon-user" style="margin-right: 10px"></span>Sign Up</a></li>
+        <li class = "nav-link"><a class = "nav-link" href="/login"><span class="glyphicon glyphicon-log-in" style="margin-right: 10px"></span>Login</a></li>
+        <li class = "nav-link"><a class = "nav-link" href="/managefeeds"><span class="glyphicon glyphicon-cog" style="margin-right: 10px"></span>Manage Feeds</a></li>
     </ul>
 </nav>
 
