--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,20 +5,22 @@
 <body>
     <nav th:replace = "fragments :: navigation"></nav>
     <div class="table-striped table-responsive container" style="margin-top: 2%; margin-bottom: 2%;">
+        <div th:unless = "${session.containsKey('username') == null}" th:text = "${session.username}"></div>
         <table class = "table table-striped" style = "max-width:1200px;">
             <col width="130">
             <col width="200">
-            <col width="80">
-            <col width="80">
-            <thead class = "thead-dark">
-                <tr >
-                    <th scope="col"><h1>Title</h1></th>
-                    <th scope="col"><h1>Description</h1></th>
+            <col width="8">
+            <thead class = "thead-light">
+                <tr>
+                    <th scope="col"><h3>Title</h3></th>
+                    <th scope="col"><h3>Description</h3></th>
+                    <th scope="col"><h3>Date</h3></th>
                 </tr>
             </thead>
             <tr th:each = "feed : ${feedList}">
                 <td scope="row"><a th:href = "${feed.link}" th:text = "${feed.title}" scope="row">link</a></td>
                 <td th:utext = "${feed.description}" scope="row"></td>
+                <td th:text = "${feed.datePublished}" scope="row"></td>
             </tr>
         </table>
     </div>
