--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,6 +10,14 @@
         color: black;
         margin-top: 2%;
     }
+
+    form{
+        min-width: 200px;
+        max-width: 30%;
+    }
+    form::before{
+        max-width: 30%;
+    }
 </style>
 
 <body onload="getQueries()">
@@ -18,6 +26,7 @@
     <div id="errorMessage"></div>
 
     <div th:if="${param.error}">Invalid username or password.</div>
+    
     <form method="post" class="container form w-25" th:action="@{/login}" th:object = "${user}">
         <h1 class="display-5 form_header">Login</h1>
         <div class="form-group">
