--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -12,6 +12,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous"/>
 
+    <link rel="stylesheet" th:href="@{styles/errors.css}">
     <style>
         @import url("//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css");
     </style>
@@ -28,7 +29,7 @@
         </span>
 
         <span th:unless = "${session.userId == null}" class="navbar-nav navbar-right ml-auto">
-            <div class = "nav-link"><a class = "nav-link" href="/logout"><span class="glyphicon glyphicon-log-out" style="margin-right: 10px"></span>Logout</a></div>
+            <div class = "nav-link" id="logout"><a class = "nav-link"><span class="glyphicon glyphicon-log-out" style="margin-right: 10px"></span>Logout</a></div>
             <div class = "nav-link"><a class = "nav-link" href="/managefeeds"><span class="glyphicon glyphicon-cog" style="margin-right: 10px"></span>Manage Feeds</a></div>
 
             <span th:if = "${session.role == 'ADMIN'}">
