--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -30,19 +30,56 @@
     <form method="post" class="container form w-25" th:action="@{/login}" th:object = "${user}">
         <h1 class="display-5 form_header">Login</h1>
         <div class="form-group">
-            <label th:for="username">Username</label>
+            <label for="username">Username</label>
             <input class="form-control" name="username" id="username"/>
         </div>
         <div class="form-group">
-            <label th:for="passwordTB">Password</label>
+            <label for="passwordTB">Password</label>
             <input class="form-control" name="password" id="password" type="password"/>
         </div>
+        <div class="form-group">
+            <label for="stay-loggedIn" id="submit-label">Stay Logged In: </label>
+            <input type="checkbox" name="stay-loggedIn" id="stay-loggedIn"/>
+        </div>
 
-        <button type="submit" class="btn btn-primary btn-lg btn-block">Sign In</button>
+        <button type="submit" class="btn btn-primary btn-lg btn-block" id="loginBtn" >Sign In</button>
     </form>
 </body>
 
 <script>
+
+    $(document).ready(function(){
+    });
+
+    $("#loginBtn").click(function(event){
+        var username = $("#username").val();
+        var password = $("#password").val();
+        $.post("login/" + username + "/" + password, function(data){
+            if(data == "success"){
+                if($("#stay-loggedIn").is(":checked")){
+                    setCookie("stayLoggedIn", "1", 30);
+                    setCookie("username", username, 30);
+                    setCookie("password", password, 30);
+                } else {
+                    setCookie("stayLoggedIn", "0", -1);
+                    setCookie("username", username, -1);
+                    setCookie("password", password, -1);
+                }
+
+                window.location = "/";
+            } else {
+                displayError(data);
+            }
+        });
+        event.preventDefault();
+        
+    });
+
+    $("#errorMessage").click(function(){
+        $("#errorMessage").text("");
+        $("#password").val("");
+    });
+
     function displayError(errorMessage){
         document.getElementById("errorMessage").innerText = errorMessage;
     }
@@ -56,7 +93,6 @@
             results = regex.exec(url);
         if (!results) return null;
         if (!results[2]) return '';
-        console.log("Test");
         
         return decodeURIComponent(results[2].replace(/\+/g, " "));
     }
@@ -67,6 +103,29 @@
 
         displayError(errors);
         document.getElementById("username").value = username;
+    }
+
+    function setCookie(cname, cvalue, exdays) {
+        var d = new Date();
+        d.setTime(d.getTime() + (exdays*24*60*60*1000));
+        var expires = "expires="+ d.toUTCString();
+        document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
+    }
+
+    function getCookie(cname) {
+        var name = cname + "=";
+        var decodedCookie = decodeURIComponent(document.cookie);
+        var ca = decodedCookie.split(';');
+        for(var i = 0; i <ca.length; i++) {
+            var c = ca[i];
+            while (c.charAt(0) == ' ') {
+                c = c.substring(1);
+            }
+            if (c.indexOf(name) == 0) {
+                return c.substring(name.length, c.length);
+            }
+        }
+        return "";
     }
 </script>
 </html>
