--- a/src/main/resources/templates/managefeeds.html
+++ b/src/main/resources/templates/managefeeds.html
@@ -46,5 +46,42 @@
             });
         });
     });
+    
+    $("#logout").click(function(){
+        console.log("click");
+        clearCookies();
+        $.get("/logout");
+        window.location = "/";
+    });
+
+    function setCookie(cname, cvalue, exdays) {
+        var d = new Date();
+        d.setTime(d.getTime() + (exdays*24*60*60*1000));
+        var expires = "expires="+ d.toUTCString();
+        document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
+    }
+
+    function getCookie(cname) {
+        var name = cname + "=";
+        var decodedCookie = decodeURIComponent(document.cookie);
+        var ca = decodedCookie.split(';');
+        for(var i = 0; i <ca.length; i++) {
+            var c = ca[i];
+            while (c.charAt(0) == ' ') {
+                c = c.substring(1);
+            }
+            if (c.indexOf(name) == 0) {
+                return c.substring(name.length, c.length);
+            }
+        }
+        return "";
+    }
+
+    function clearCookies(){
+        setCookie("stayLoggedIn", "0", -1);
+        setCookie("username", "", -1);
+        setCookie("password", "", -1);
+    }
+
 </script>
 </html>
