--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -12,13 +12,13 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous"/>
 
-    <link rel="stylesheet" th:href="@{styles/errors.css}">
+    <link rel="stylesheet" th:href="@{styles/errors.css}"/>
     <style>
         @import url("//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css");
     </style>
 </head>
-<body>
 
+<body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark" th:fragment="navigation">
         <ul class="navbar-nav">
             <a class="navbar-brand mb-0" style="font-size: 1.5em;" href="/">News Hub</a>
